[package]
name = "rust_vm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# This is the one that finally works
# But HAS TO be passed via environment as CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER (why???)
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[features]
debug_print = []

[dependencies]
